--- a/src/main/resources/templates/titles.html
+++ b/src/main/resources/templates/titles.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>IIS knihovna</title>
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
@@ -24,28 +25,28 @@
                 </a>
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                     <li sec:authorize="isAnonymous()">
-                        <a href="/login" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Login</span></a>
+                        <a href="/login" class="nav-link px-0 align-middle text-light">
+                            <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Přihlášní</span></a>
                     </li>
                     <li sec:authorize="isAnonymous()">
-                        <a href="/register" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-gear-fill"></i> <span class="ms-1 d-none d-sm-inline">Register</span></a>
+                        <a href="/register" class="nav-link px-0 align-middle text-light">
+                            <i class="fs-4 bi-gear-fill"></i> <span class="ms-1 d-none d-sm-inline">Registrace</span></a>
                     </li>
                     <li sec:authorize="hasRole('ADMIN')">
-                        <a href="/libraries" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Sprava knihoven</span></a>
+                        <a href="/libraries" class="nav-link px-0 align-middle text-light">
+                            <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Správa knihoven</span></a>
                     </li>
                     <li sec:authorize="hasRole('LIBRARIAN')">
-                        <a th:href="@{/library(library_id=${librarian_lib})}" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Sprava knihovny</span></a>
+                        <a th:href="@{/library(library_id=${librarian_lib})}" class="nav-link px-0 align-middle text-light">
+                            <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Správa knihovny</span></a>
                     </li>
                     <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
-                        <a href="/book" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Pridani knih</span></a>
+                        <a href="/book" class="nav-link px-0 align-middle text-light">
+                            <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Přidání knih</span></a>
                     </li>
                     <li sec:authorize="hasRole('ADMIN')">
-                        <a href="/users" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sprava uzivatelu</span></a>
+                        <a href="/users" class="nav-link px-0 align-middle text-light">
+                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Správa uživatelů</span></a>
                     </li>
                     <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
                         <a href="/reservations/createLoan" class="nav-link px-0 align-middle">
@@ -60,121 +61,106 @@
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
 
-                        <li sec:authorize="hasRole('ADMIN')"><span class="dropdown-item">Administrator</span> </li>
-                        <li sec:authorize="hasRole('LIBRARIAN')"><span class="dropdown-item">Knihovnik</span> </li>
-                        <li sec:authorize="hasRole('READER')"><span class="dropdown-item">Ctenar</span> </li>
+                        <li sec:authorize="hasRole('ADMIN')"><span class="dropdown-item">Administrátor</span> </li>
+                        <li sec:authorize="hasRole('LIBRARIAN')"><span class="dropdown-item">Knihovník</span> </li>
+                        <li sec:authorize="hasRole('READER')"><span class="dropdown-item">Čtenář</span> </li>
 
-                        <li sec:authorize="hasRole('READER')"><a class="dropdown-item" href="/reservationSummary">My reservations</a></li>
+                        <li sec:authorize="hasRole('READER')"><a class="dropdown-item" href="/reservationSummary">Moje rezervace</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="/logout">Sign out</a></li>
+                        <li><a class="dropdown-item" href="/logout">Odhlášení</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="col py-3">
-            <p th:if= "${message != ''}" th:text="${message}"></p>
-            <form th:action="@{/titles}">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <input type="text" class="form-control" placeholder="Jmeno knihy" th:name="book_name" th:value="${book_name}"/>
+        <div class="col-auto col-xl-10 col-md-9 col-sm-9 col-10">
+            <div class="bg-light rounded mb-3 mt-3">
+                <p th:if= "${message != ''}" th:text="${message}"></p>
+                <form th:action="@{/titles}" class="row g-3">
+                    <div class="col-md-4 col-sm-6">
+                        <label class="form-check-label" for="book_name">Název knihy</label>
+                        <input type="text" class="form-control" id="book_name" th:name="book_name" th:value="${book_name}"/>
                     </div>
-                    <div class="col-sm-4">
-                        <input type="text" class="form-control" placeholder="Žánr" th:name="book_genre" th:value="${book_genre}"/>
+                    <div class="col-md-4 col-sm-6">
+                        <label class="form-check-label" for="book_genre">Žánr</label>
+                        <input type="text" class="form-control" id="book_genre" th:name="book_genre" th:value="${book_genre}"/>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <input type="text" class="form-control" placeholder="Autor" th:name="author_name" th:value="${author_name}"/>
+                    <div class="col-md-4 col-sm-6">
+                        <label class="form-check-label" for="author_name">Jméno autora</label>
+                        <input type="text" class="form-control" id="author_name" th:name="author_name" th:value="${author_name}"/>
                     </div>
-                    <div class="col-sm-3">
-                        <input type="number" min="1" ßmax="2021" class="form-control" th:name="release_date" th:value="${release_date}"/>
+                    <div class="col-md-4 col-sm-6">
+                        <label class="form-check-label" for="release_date">Rok vydání</label>
+                        <input type="number" class="form-control" min="1" ßmax="2021" id="release_date" th:name="release_date" th:value="${release_date}"/>
                     </div>
-                    <div class="col-sm-1">
-                        <input type="checkbox" class="form-check-input" id="before_checkbox" th:name="before" th:checked="${before}" />
-                        <label class="form-check-label" for="before_checkbox">
-                            před?
-                        </label>
+                    <div class="col-md-4 col-sm-6">
+                        <label class="form-check-label" for="isbn">ISBN</label>
+                        <input type="text" class="form-control" id="isbn" th:name="isbn" th:value="${isbn}"/>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-2">
-                        <input type="text" class="form-control" placeholder="ISBN" th:name="isbn" th:value="${isbn}"/>
+                    <div class="col-md-4 col-sm-6">
+                        <label class="form-check-label" for="publisher">Vydavatel</label>
+                        <input type="text" class="form-control" id="publisher" th:name="publisher" th:value="${publisher}"/>
                     </div>
-                    <div class="col-sm-3">
-                        <input type="text" class="form-control" placeholder="vydavatel" th:name="publisher" th:value="${publisher}"/>
+                    <div class="col-md-4 col-sm-6">
+                        <label class="form-check-label" for="rating_input">Hodnocení</label>
+                        <input type="number" class="form-control" id="rating_input" min="1" max="10" th:name="genre" th:value="${genre}"/>
                     </div>
-                    <div class="col-sm-2">
-                        <input type="number" id="rating_input" min="1" max="10" th:name="genre" th:value="${genre}"/>
-                        <label class="form-check-label" for="rating_input">
-                            Minimalni rating
-                        </label>
+                    <div class="col-md-4 col-sm-6 mt-4">
+                        <div class="form-check form-switch \">
+                            <label class="form-check-label" for="before_checkbox">pouze před zadaným datem </label>
+                            <input type="checkbox" class="form-check-input" id="before_checkbox" th:name="before" th:checked="${before}"/>
+                        </div>
                     </div>
-                </div>
-                <div class="col">
-                    <input class="form-control" type="submit"/>
-                </div>
-            </form>
-            <table id="bookListing" class="table table-hover">
-                <thead>
-                <tr>
-                    <th>Jmeno</th>
-                    <th>Datum vydani</th>
-                    <th>Zanr</th>
-                    <th>Autori</th>
-                    <th>ISBN</th>
-                    <th>Vydavatel</th>
-                    <th>Hodnoceni</th>
-                    <th>Akce</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="book : ${books}">
-                    <td th:text="${book.name}">Onions</td>
-                    <td th:text="${book.release}">2.41</td>
-                    <td th:text="${book.genre}">yes</td>
-                    <td>
-                        <p th:each="author_name : ${book.authors_names}" th:text="${author_name}"></p>
-                    </td>
-                    <td th:text="${book.isbn}"> AC12</td>
-                    <td th:text="${book.publisher}">Franz Josef</td>
-                    <td th:text="${book.rate}">Franz Josef</td>
-                    <td sec:authorize="hasRole('DISTRIBUTOR')">
-                        <a th:href="${'/title/' + book.id}">
-                            <button class="btn btn-success">
-                                Edit
-                            </button>
-                        </a>
-                        <a th:href="${'/title/' + book.id + '/delete'}">
-                            <button class="btn btn-danger">
-                                Smazat
-                            </button>
-                        </a>
-                    </td>
-                    <td sec:authorize="hasRole('LIBRARIAN')">
-                        <form th:action="@{/order}" method="get">
-                            <input type="hidden" th:value="${book.id}" th:name="title"/>
-                            <input type="hidden" th:value="${librarians_library}" th:name="library"/>
-                            <input type="number" th:name="count" th:value="1" min="1" max="10"/>
-                            <input class="form-control" type="submit"/>
-                        </form>
-                    </td>
-                </tr>
-                </tbody>
-                <tfoot>
-                <tr>
-                    <th>Jmeno</th>
-                    <th>Datum vydani</th>
-                    <th>Zanr</th>
-                    <th>Autori</th>
-                    <th>ISBN</th>
-                    <th>Vydavatel</th>
-                    <th>Hodnoceni</th>
-                    <th>Akce</th>
-                </tr>
-                </tfoot>
-            </table>
+
+                    <div class="row my-3 ml-0">
+                        <div class="col-md-3 ml-0">
+                            <input class="form-control btn btn-secondary" type="submit" value="Filtrovat"/>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="table-responsive">
+                <table id="bookListing" class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>Název</th>
+                        <th>Datum vydání</th>
+                        <th>Žánr</th>
+                        <th>Autoři</th>
+                        <th>ISBN</th>
+                        <th>Vydavatel</th>
+                        <th>Hodnocení</th>
+                        <th>Akce</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="book : ${books}">
+                        <td th:text="${book.name}">Onions</td>
+                        <td th:text="${book.release}">2.41</td>
+                        <td th:text="${book.genre}">yes</td>
+                        <td>
+                            <p th:each="author_name : ${book.authors_names}" th:text="${author_name}"></p>
+                        </td>
+                        <td th:text="${book.isbn}"> AC12</td>
+                        <td th:text="${book.publisher}">Franz Josef</td>
+                        <td th:text="${book.rate}">Franz Josef</td>
+                        <td>
+                            <a th:href="${'/title/' + book.id}">
+                                <button class="btn btn-success">
+                                    Upravit
+                                </button>
+                            </a>
+                            <a th:href="${'/title/' + book.id + '/delete'}">
+                                <button class="btn btn-danger">
+                                    Smazat
+                                </button>
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
